interval_narrowing implemented

--- a/poc.ipynb
+++ b/poc.ipynb
@@ -537,17 +537,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from explainers.dce import DistributionalCounterfactualExplainer\n",
     "\n",
@@ -562,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +563,7 @@
        "0.39794899408064976"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.3306135203202008, 0.44582240207883994)"
+       "(0.3383590978684278, 0.4427482396727031)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -613,41 +605,44 @@
       "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:303: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  x = torch.tensor(x, dtype=torch.float32)\n",
       "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:304: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  y = torch.tensor(y, dtype=torch.float32)\n",
-      "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:330: RuntimeWarning: invalid value encountered in power\n",
-      "  return np.power(SW_lower, 1 / r), np.power(SW_upper, 1 / r)\n",
-      "INFO:root:Iter 1: Q = 0.09176027774810791, term1 = 0.014293944463133812, term2 = 0.09254276752471924\n",
-      "INFO:root:Iter 2: Q = 0.07210223376750946, term1 = 0.034891217947006226, term2 = 0.07247810065746307\n",
-      "INFO:root:Iter 3: Q = 0.059534527361392975, term1 = 0.05566668510437012, term2 = 0.059573594480752945\n",
-      "INFO:root:Iter 4: Q = 0.051060087978839874, term1 = 0.07506056874990463, term2 = 0.05081765726208687\n",
-      "INFO:root:Iter 5: Q = 0.043552227318286896, term1 = 0.09403568506240845, term2 = 0.043042294681072235\n",
-      "INFO:root:Iter 6: Q = 0.03820786625146866, term1 = 0.1094941645860672, term2 = 0.03748780116438866\n",
-      "INFO:root:Iter 7: Q = 0.034168679267168045, term1 = 0.12299130111932755, term2 = 0.03327148035168648\n",
-      "INFO:root:Iter 8: Q = 0.03165357559919357, term1 = 0.13079461455345154, term2 = 0.030652150511741638\n",
-      "INFO:root:Iter 9: Q = 0.029556788504123688, term1 = 0.13753393292427063, term2 = 0.028466109186410904\n",
-      "INFO:root:Iter 10: Q = 0.027310805395245552, term1 = 0.14563962817192078, term2 = 0.02611556462943554\n",
-      "INFO:root:Iter 11: Q = 0.02592066302895546, term1 = 0.15052108466625214, term2 = 0.024662071838974953\n",
-      "INFO:root:Iter 12: Q = 0.02503485046327114, term1 = 0.15367648005485535, term2 = 0.023735441267490387\n",
-      "INFO:root:Iter 13: Q = 0.02422606386244297, term1 = 0.15711814165115356, term2 = 0.022883718833327293\n",
-      "INFO:root:Iter 14: Q = 0.023651421070098877, term1 = 0.158171609044075, term2 = 0.02229263260960579\n",
-      "INFO:root:Iter 15: Q = 0.02290063537657261, term1 = 0.16203372180461884, term2 = 0.02149525098502636\n",
-      "INFO:root:Iter 16: Q = 0.022504299879074097, term1 = 0.16217975318431854, term2 = 0.02109343558549881\n",
-      "INFO:root:Iter 17: Q = 0.02181444689631462, term1 = 0.16618068516254425, term2 = 0.020356200635433197\n",
-      "INFO:root:Iter 18: Q = 0.021443510428071022, term1 = 0.16583825647830963, term2 = 0.019984977319836617\n",
-      "INFO:root:Iter 19: Q = 0.02078176848590374, term1 = 0.16974681615829468, term2 = 0.019277071580290794\n",
-      "INFO:root:Iter 20: Q = 0.0205543152987957, term1 = 0.1692841649055481, term2 = 0.019051995128393173\n"
+      "  y = torch.tensor(y, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20972\\1788362511.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mexplainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mU_1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mU_2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.995\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.996\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtau\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\dce.py\u001b[0m in \u001b[0;36moptimize\u001b[1;34m(self, U_1, U_2, l, r, kappa, max_iter, tau, tol, alpha)\u001b[0m\n\u001b[0;32m    219\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m             )\n\u001b[1;32m--> 221\u001b[1;33m             _, Qu_upper = self.swd.distance_interval(\n\u001b[0m\u001b[0;32m    222\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m             )\n",
+      "\u001b[1;32mc:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py\u001b[0m in \u001b[0;36mdistance_interval\u001b[1;34m(self, X_s, X_t, delta, alpha, bootstrap)\u001b[0m\n\u001b[0;32m    150\u001b[0m     ):\n\u001b[0;32m    151\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mbootstrap\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 152\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mbootstrap_sw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_s\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdelta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_proj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    153\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m             \u001b[0mN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthetas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py\u001b[0m in \u001b[0;36mbootstrap_sw\u001b[1;34m(x, y, delta, alpha, N, r, B)\u001b[0m\n\u001b[0;32m    319\u001b[0m         \u001b[0myy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my_indices\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    320\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 321\u001b[1;33m         \u001b[0mSW_boot\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mswd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    322\u001b[0m         \u001b[0mSW_boot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSW_boot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    323\u001b[0m         \u001b[0mboot\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSW_boot\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mSW_hat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py\u001b[0m in \u001b[0;36mdistance\u001b[1;34m(self, X_s, X_t, delta)\u001b[0m\n\u001b[0;32m    133\u001b[0m             \u001b[0mproj_X_t\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_t\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"cpu\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mtheta\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 135\u001b[1;33m             \u001b[0mdist_wd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproj_X_s\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproj_X_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    136\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmu_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py\u001b[0m in \u001b[0;36mdistance\u001b[1;34m(self, y_s, y_t, delta)\u001b[0m\n\u001b[0;32m     55\u001b[0m         ).to(\"cpu\")\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m         \u001b[0mtrimmed_nu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0memd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproj_y_s_dist_mass\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproj_y_t_dist_mass\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrimmed_M_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m         \u001b[1;31m# trimmed_nu = ot.bregman.sinkhorn(\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m         \u001b[1;31m#     proj_y_s_dist_mass, proj_y_t_dist_mass, M_y, reg=self.reg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\leiyo\\Anaconda3\\lib\\site-packages\\ot\\lp\\__init__.py\u001b[0m in \u001b[0;36memd\u001b[1;34m(a, b, M, numItermax, log, center_dual, numThreads)\u001b[0m\n\u001b[0;32m    336\u001b[0m     \u001b[0mnumThreads\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_number_threads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumThreads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    337\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 338\u001b[1;33m     \u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcost\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_code\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0memd_c\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumItermax\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumThreads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    339\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    340\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcenter_dual\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "explainer.optimize(U_1=2, U_2=2, max_iter=20, tau=1e3)"
+    "explainer.optimize(U_1=0.5, U_2=0.5, l=0.995, r=0.996, max_iter=20, tau=1e3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:test\n"
+     ]
+    }
+   ],
    "source": [
     "X_s = explainer.X.clone()\n",
     "X_t = explainer.X_prime.clone()"
@@ -655,16 +650,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.45968266389275086"
+       "0.25996723812272143"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,18 +670,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.05253231756883031, 0.4784367562518079)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:303: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  x = torch.tensor(x, dtype=torch.float32)\n",
+      "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:304: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  y = torch.tensor(y, dtype=torch.float32)\n",
+      "c:\\Users\\leiyo\\GitHub\\distributional-counterfactual-explanation\\explainers\\distances.py:330: RuntimeWarning: invalid value encountered in power\n",
+      "  return np.power(SW_lower, 1 / r), np.power(SW_upper, 1 / r)\n"
+     ]
     }
    ],
    "source": [
@@ -2605,6 +2602,58 @@
     "plt.colorbar()\n",
     "plt.title(\"Heatmap of the Matrix\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected eta: 0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "a = 0\n",
+    "b = 1\n",
+    "l = 0.2\n",
+    "r = 0.8\n",
+    "eta = choose_eta(a, b, l, r)\n",
+    "print(f\"Selected eta: {eta}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.496248915026118, 0.36512203655880177, 0.5592421635430274)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eta, l, r = explainer._get_eta_interval_narrowing(\n",
+    "    U_1=0.5, \n",
+    "    U_2=0.7, \n",
+    "    Qu_upper=0.3784367562518079, \n",
+    "    Qv_upper=0.64582240207883994,\n",
+    "    l=l,\n",
+    "    r=r,\n",
+    "    kappa=0.05\n",
+    ")\n",
+    "eta, l, r"
    ]
   },
   {
